[package]
name = "who-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
serde = "1.0.188"
figment = { version = "0.10", features = ["toml", "env"] }
tokio = "1.32"
twilight-model = "0.15.4"
twilight-http = "0.15.4"